# lmaocat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
src/: main.cpp
src/Args/: Args.cpp  Args.hpp
src/Rainbow/: Rainbow.cpp  Rainbow.hpp
src/Rainbow/ANSI/: ANSI.cpp  ANSI.hpp
src/lmaocat/: lmaocat.cpp  lmaocat.hpp
